# lhug

./: .gitignore  LHUG.cabal  cabal.sandbox.config
src/PartOne/: PartOne.hs
src/PartTwo/: PartTwo.hs
src/main/: Codewars.hs
src/main/PartThree/: PartThree.hs
src/main/PartTwo/: PartTwo.hs
src/test/: AllTests.hs
src/test/PartThree/: PartThreeTest.hs
src/test/PartTwo/: PartTwoTest.hs
