Name:                LHUG
Version:             0.0.0.0
Synopsis:            The exercises

License:             BSD3
License-File:        LICENSE

Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Exposed-Modules:     PartOne.PartOne,
                       PartTwo.PartTwo
  Build-Depends:       base >= 4 && < 5
  Hs-Source-Dirs:      src
  Ghc-Options:         -Wall

