Name:                LHUG
Version:             0.0.0.0
Synopsis:            The exercises

License:             BSD3

Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Exposed-Modules:     PartOne.PartOne,
                       PartTwo.PartTwo
  Build-Depends:       base >= 4 && < 5,
                       containers
  Hs-Source-Dirs:      src/main
  Ghc-Options:         -Wall

Test-Suite part-two
  Main-Is:  PartTwoTest.hs
  type:  exitcode-stdio-1.0
  Build-Depends:   base >= 4 && <5,
                   tasty,
                   tasty-hunit,
                   tasty-hspec,
                   LHUG
  hs-source-dirs: src/test/PartTwo

