Name:                LHUG
Version:             0.0.0.0
Synopsis:            The exercises

License:             BSD3

Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Exposed-Modules:     PartOne.PartOne,
                       PartTwo.PartTwo,
                       PartThree.PartThree
  Build-Depends:       base >= 4 && < 5,
                       tasty,
                       tasty-hunit,
                       tasty-hspec
  Hs-Source-Dirs:      src/main
  Ghc-Options:         -Wall

Test-Suite all-tests
  Main-Is:  AllTests.hs
  type:  exitcode-stdio-1.0
  Build-Depends:   base >= 4 && <5,
                   tasty,
                   tasty-hunit,
                   tasty-hspec,
                   LHUG
  hs-source-dirs: src/test

